--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="6"
-            android:background="@drawable/camicon"/>
+            android:background="@drawable/camicon"
+            android:onClick="mOnPopupClick"
+            />
     </LinearLayout>
 
     <WebView
@@ -52,32 +54,41 @@
             android:layout_width="match_parent"
             android:layout_height="74dp"
             android:layout_weight="1"
-            android:background="@drawable/c1"
+            android:background="@drawable/c11"
+            android:onClick="cone"
             />
         <Button
             android:id="@+id/two"
             android:layout_width="match_parent"
             android:layout_height="74dp"
             android:layout_weight="1"
-            android:background="@drawable/c2"/>
+            android:background="@drawable/c2"
+            android:onClick="ctwo"
+            />
         <Button
             android:id="@+id/three"
             android:layout_width="match_parent"
             android:layout_height="74dp"
             android:layout_weight="1"
-            android:background="@drawable/c3"/>
+            android:background="@drawable/c3"
+            android:onClick="cthree"
+            />
         <Button
             android:id="@+id/four"
             android:layout_width="match_parent"
             android:layout_height="74dp"
             android:layout_weight="1"
-            android:background="@drawable/c4"/>
+            android:background="@drawable/c4"
+            android:onClick="cfour"
+            />
         <Button
             android:id="@+id/five"
             android:layout_width="match_parent"
             android:layout_height="74dp"
             android:layout_weight="1"
-            android:background="@drawable/c5"/>
+            android:background="@drawable/c5"
+            android:onClick="cfive"
+            />
     </LinearLayout>
 
     <TextView
